--- a/client/views/app_layout.html
+++ b/client/views/app_layout.html
@@ -1,6 +1,8 @@
 <template name="applayout">
-  {{>header}}
-  {{> yield}}
-
-  {{> yield "footer"}}
+  <div class="container">
+    <nav></nav>
+    {{>header}}
+    {{> yield}}
+    {{> footer}}
+  </div>
 </template>
